Updated Index.html to work with new projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="flex-container">
      
-    <a href="/50projects/01-expanding-cards/index.html" target="_blank">    
+    <a href="/01-expanding-cards/index.html" target="_blank">    
     <div class="card">
         <div class="container">
             <h4><b> <i class="fas fa-crop-alt"></i> Flex-карточки</b></h4>
@@ -24,7 +24,7 @@
     </div>
     </a>
     
-    <a href="/50projects/02-buttons-indicator/index.html" target="_blank">
+    <a href="/02-buttons-indicator/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b>Кнопки  <i class="far fa-caret-square-left"></i> <i class="far fa-caret-square-right"></i></b></h4>
@@ -33,7 +33,7 @@
     </div>
     </a>
 
-    <a href="/50projects/03-rotating_navigation/index.html" target="_blank">
+    <a href="/03-rotating_navigation/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-bars"></i> Кнопка меню</b></h4>
@@ -42,7 +42,7 @@
     </div>
     </a>
 
-    <a href="/50projects/04-search-widget/index.html" target="_blank">
+    <a href="/04-search-widget/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-search"></i> Поиск</b></h4>
@@ -51,7 +51,7 @@
     </div>
     </a>
 
-    <a href="/50projects/13-random-choice/index.html" target="_blank">
+    <a href="/13-random-choice/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-random"></i> Случайный выборщик</b></h4>
@@ -60,7 +60,7 @@
     </div>
     </a>
 
-    <a href="/50projects/32-cheap-checkbox/index.html" target="_blank">
+    <a href="/32-cheap-checkbox/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b><i class="far fa-check-square"></i> Чекбоксы</b></h4>
@@ -69,7 +69,7 @@
     </div>
     </a>
 
-    <a href="/50projects/36-color-hover-board/index.html" target="_blank">
+    <a href="/36-color-hover-board/index.html" target="_blank">
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-th"></i> Цветной ховерборд</b></h4>
