--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="card">
         <div class="container">
             <h4><b><i class="far fa-check-square"></i> Чекбоксы</b></h4>
-            <p>Быстро, дешево, круто.</p>
+            <p>быстро, дешево, круто.</p>
         </div>
     </div>
     </a>
@@ -73,7 +73,7 @@
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-th"></i> Цветной ховерборд</b></h4>
-            <p>Просто проведи мышкой</p>
+            <p>просто проведи мышкой</p>
         </div>
     </div>
     </a>    
@@ -82,7 +82,7 @@
     <div class="card">
         <div class="container">
             <h4><b><i class="fas fa-clipboard-list"></i> Todos</b></h4>
-            <p>Стандартный список задач</p>
+            <p>список задач</p>
         </div>
     </div>
     </a>
