--- a/tinkoff/tinkoff.html
+++ b/tinkoff/tinkoff.html
@@ -15,7 +15,7 @@
         <div class="card00 card-wrapper">
             <time class="time">2 февраля</time>
             <h1 class="">Delivery Club: как повысить продажи</h1>
-            <p class="maintext">По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club</p>
+            <p class="maintext0">По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club</p>
         </div>
         <!-- карточка 1 -->
         <div class="card01 card-wrapper">
