--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <div class="card">
         <div class="card__body">
-          <img src="./tinkoff/Screenshot 2021-07-15 162217.png" alt="" class="card__image">
+          <img src="./tinkoff/preview.png" alt="" class="card__image">
           <h2 class="card__title">HTML-вёрстка</h2>
           <p class="card__description">Веб-сторис для банка Тинькофф</p>
           <p class="card__tools"><i class="fa fa-html5" aria-hidden="true"></i>HTML CSS</p>
