--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         </section>
         <section class="aboutme">
-                           <p>Я решил круто изменить свою карьеру и теперь ищу работу в сфере веб-разработки. Мне всегда нравилось программирование и новые технологии, но они оставались в качестве хобби. Теперь я хочу сделать программирование своей профессией.</p>
+                           <p>Я решил круто изменить свою карьеру и теперь хочу стать профи в сфере веб-разработки. Мне всегда нравилось программирование и новые технологии, но они оставались в качестве хобби. Теперь я хочу сделать программирование своей профессией.</p>
                            
             
             </section>
