Updated my portfolio
updated my portfolio with react and game projects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </section>
             
         <section class="myworks">
-            <h2>ПРИМЕРЫ ПРОЕКТОВ</h2>
+            <h2>Проекты на HTML, CSS, JavaScript</h2>
         </section>    
 
 
@@ -173,6 +173,104 @@
             <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/tinkoff" target="_blank" class="card__btn">Code</a>
         </div>
     </div>
+</div>
+
+<hr>
+
+<section class="myworks">
+    <h2>Проекты на React</h2>
+</section> 
+
+<div class="card__wrapper">
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./react-flashcards/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">Флеш-карточки</h2>
+        <p class="card__description">прототип с функционалом "флеш-карточек" для изучения иностранных языков</p>
+        <p class="card__tools">React</p>
+        </div>
+        <div class="buttons">
+            <a href="./react-flashcards/index.html" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/react-flashcards" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./react-guess-game/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">Угадай число</h2>
+        <p class="card__description">математический тренажер для первоклассников</p>
+        <p class="card__tools">React</p>
+        </div>
+        <div class="buttons">
+            <a href="./react-guess-game/index.html" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/react-guess-game" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./react-todos/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">Todo list</h2>
+        <p class="card__description">простой список задач</p>
+        <p class="card__tools">React</p>
+        </div>
+        <div class="buttons">
+            <a href="./react-todos/index.html" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/react-todos" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
+</div>
+
+<hr>
+
+<section class="myworks">
+    <h2>Игровые проекты</h2>
+</section> 
+
+<div class="card__wrapper">
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./game-pico-adventure/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">PICO-8 Adventure</h2>
+        <p class="card__description">простой прототип top-down adventure на движке Pico-8</p>
+        <p class="card__tools">Pico-8</p>
+        </div>
+        <div class="buttons">
+            <a href="https://reynmar.itch.io/micro-adventure-beta" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/game-pico-adventure" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./game-glory/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">Поход за Славой</h2>
+        <p class="card__description">Текстовый квест с механиками боя и RPG, сделан на движке Twine</p>
+        <p class="card__tools">Twine</p>
+        </div>
+        <div class="buttons">
+            <a href="https://reynmar.itch.io/textforglory" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/game-glory" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__body">
+        <img src="./game-foxnbats/preview.jpg" alt="" class="card__image">
+        <h2 class="card__title">Fox & Bats</h2>
+        <p class="card__description">Ранний прототип action-adventure в стиле Zelda на движке GODOT</p>
+        <p class="card__tools">GODOT</p>
+        </div>
+        <div class="buttons">
+            <a href="https://reynmar.itch.io/fox-and-bats" target="_blank" class="card__btn">Live</a>
+            <a href="https://github.com/mpasichnyuk/mpasichnyuk.github.io/tree/gh-pages/game-foxnbats" target="_blank" class="card__btn">Code</a>
+        </div>
+    </div>
+
 </div>
 
 
