--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         </section>
         <section class="aboutme">
-                           <p>Я решил изменить свою карьеру и перейти из сферы медиа и дизайна в сферу Веб-разработки. Мне всегда нравилось программировать и изучать новые технологии, и теперь я собираюсь стать самым крутым фронтендером!</p>
+                           <p>Я решил изменить свою карьеру и перейти из медийной сферы в технологическую. Мне нравяться проекты которые сочетают в себе артистизм дизайна и современные технологические решения. Кроме того, я самостоятельно изучаю фронтенд-разработку и гейм-дизайн. Ниже представлены примеры моих проектов. </p>
                            
             
             </section>
