--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
                 <span class="section__title section__title--intro">
                     Привет, я <br/> <strong>Михаил Пасичнюк</strong></br>
                     <hr>
-                    <p class="section__subtitle section__subtitle--intro"> &lt;PM&gt;</p>
+                    <p class="section__subtitle section__subtitle--intro"> &lt;junior front-end dev&gt;</p>
             </div>
 
         </section>
         <section class="aboutme">
-                           <p>Я решил изменить свою карьеру и перейти из медийной сферы в технологическую. Мне нравяться проекты которые сочетают в себе артистизм дизайна и современные технологические решения. Кроме того, я самостоятельно изучаю фронтенд-разработку и гейм-дизайн. Ниже представлены примеры моих проектов. </p>
+                           <p> Я решил изменить свою карьеру и перешёл из сферы медиа и дизайна в сферу IT и веб-разработки. Мне всегда нравилось программировать и изучать новые технологии, и теперь я хочу стать самым крутым фронтендером!
+                            </p>
                            
             
             </section>
